--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,5 +16,23 @@
         android:layout_height="wrap_content"
         android:text="Add data"
         android:textAllCaps="false"/>
+    <Button
+        android:id="@+id/updata_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Updata data"
+        android:textAllCaps="false"/>
+    <Button
+        android:id="@+id/delete_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete data"
+        android:textAllCaps="false"/>
+    <Button
+        android:id="@+id/query_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Query data"
+        android:textAllCaps="false"/>
 
 </LinearLayout>
